[project]
name = "effective-xgboost-2nd-edition"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.10",
    "crepes>=0.9.0",
    "feature-engine>=1.9.4",
    "flask>=3.1.3",
    "graphviz>=0.21",
    "highlight-text>=0.2",
    "jupytext>=1.19.1",
    "lightgbm>=4.6.0",
    "mljar-scikit-plot>=0.3.12",
    "notebook>=7.5.5",
    "onnx>=1.21.0",
    "onnxmltools>=1.16.0",
    "onnxruntime>=1.26.0",
    "pillow",
    "pyarrow>=23.0.1",
    "relplot>=1.0.3",
    "scipy>=1.17.1",
    "shap>=0.51.0",
    "shapiq>=1.4.1",
    "sk-stepwise>=0.2.0",
    "skl2onnx>=1.20.0",
    "skrub>=0.8.0",
    "supertree>=0.5.5",
    "tabicl>=2.0.3",
    "tabpfn>=7.1.1",
    "treefi>=0.1.2",
    "umap-learn>=0.5.12",
    "venn-abers>=1.5.1",
    "whylogs[viz]>=1.1.2",
    "xgboost>=3.2.0",
]
